objects/RoomBooking__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Charges__c</fullName>
        <label>Additional Charges</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Check_In__c</fullName>
        <label>Check In</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_Out__c</fullName>
        <label>Check Out</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <label>Deal</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guest_Address__c</fullName>
        <label>Guest Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Guest_Mobile__c</fullName>
        <label>Guest Mobile</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Guest_Name__c</fullName>
        <label>Guest Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guest_Verfication_ID__c</fullName>
        <label>Guest Verfication ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Amount__c</fullName>
        <formula>(Check_Out__c -  Check_In__c) * Price_Per_Day__c  +  Additional_Charges__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pending Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Per_Day__c</fullName>
        <label>Price Per Day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Room_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Room Number</label>
        <referenceTo>Room_List__c</referenceTo>
        <relationshipLabel>Room Link</relationshipLabel>
        <relationshipName>Room_Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Rate__c</fullName>
        <label>Tax Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Type__c</fullName>
        <label>Tax Type</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Room Booking</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Guest_Name__c</columns>
        <columns>Guest_Mobile__c</columns>
        <columns>Check_In__c</columns>
        <columns>Check_Out__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>KTM-{000000}</displayFormat>
        <label>Reference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Room Booking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>